--- a/index.html
+++ b/index.html
@@ -56,72 +56,181 @@
 
 
     <!-- carousel -->
-    <section class="carouselSlider bg-primary py-5">
-        <div class="container">
+    <section class="carouselSlider bg-primary">
+        <div class="container-fluid p-0">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <div class="row">
-                        <div class="col-md-6 py-2 m-auto">
-                            <h1 class="text-yellow text-center text-uppercase">
-                                Hello beautiful creatives
-                            </h1>
-                        </div>
-                        <div class="col-md-6 py-2 m-auto">
-                            <h2 class="text-white">
-                                Looking to Hire Talented Freelancers for your next project?
-                            </h2>
-                            <p class="text-white">
-                                The <b>Design Database</b> is an online platform and community designed as a support system for Creatives, by quickly connecting them with clients(like you!) looking to hire now.
-                            </p>
-                            <p class="text-yellow">
-                                We have so much talents for you. Get Started Now
-                            </p>
+                  <div class="carousel-item bg-dark active">
+                    <div class="container py-5">
+                        <div class="row">
+                            <div class="col-md-6 py-2 m-auto">
+                                <h1 class="text-yellow text-center text-uppercase">
+                                    THE <br>
+                                    DESIGN <br>
+                                    DATABASE <br>
+                                </h1>
+                                <h2 class="text-white text-center font-weight-normal">
+                                    FOR CREATIVES & CLIENTS
+                                </h2>
+                            </div>
+                            <div class="col-md-6 py-2 m-auto">
+                                <h2 class="text-white">
+                                    Welcome to the support <br>system for Creatives!
+                                </h2>
+                                <div class="line bg-yellow"></div>
+                                <p class="text-white font-weight-bold">
+                                    Let's get started: 
+                                </p>
+                                <ul>
+                                    <li class="text-white font-weight-bold">
+                                        Host your portfolios
+                                    </li>
+                                    <li class="text-white font-weight-bold">
+                                        Sell your work from your own account
+                                    </li>
+                                    <li class="text-white font-weight-bold">
+                                        Apply to jobs and connect with clients
+                                    </li>
+                                    <li class="text-white font-weight-bold">
+                                        Connect with other Creatives
+                                    </li>
+                                </ul>
+                                <h5 class="text-yellow">
+                                    Did we mention we take 0% commision? <a href="" class="text-yellow">Let's go!</a>
+                                </h5>
+                            </div>
                         </div>
                     </div>
                   </div>
-                  <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-md-6 py-2 m-auto">
-                            <h1 class="text-yellow text-center text-uppercase">
-                                Hello beautiful creatives
-                            </h1>
-                        </div>
-                        <div class="col-md-6 py-2 m-auto">
-                            <h2 class="text-white">
-                                Looking to Hire Talented Freelancers for your next project?
-                            </h2>
-                            <p class="text-white">
-                                The <b>Design Database</b> is an online platform and community designed as a support system for Creatives, by quickly connecting them with clients(like you!) looking to hire now.
-                            </p>
-                            <p class="text-yellow">
-                                We have so much talents for you. Get Started Now
-                            </p>
+                  <div class="carousel-item bg-primary">
+                    <div class="container py-5">
+                        <div class="row">
+                            <div class="col-md-6 py-2 m-auto">
+                                <h1 class="text-yellow text-center text-uppercase">
+                                    HELLO <br>
+BEAUTIFUL <br>
+CREATIVES <br>
+                                </h1>
+                                <h2 class="text-white text-center font-weight-normal">
+                                    LET’S FORM A COMMUNITY!
+                                </h2>
+                            </div>
+                            <div class="col-md-6 py-2 m-auto">
+                                <h2 class="text-white">
+                                    Looking to conntect with <br>other creatives like you?
+                                </h2>
+                                <div class="line bg-yellow"></div>
+                                <p class="text-white">
+                                    <span class="font-weight-bold">Let us help you</span> <br>
+                                    We've brought all of you beautiful Creatives together to:
+                                </p>
+                                <ul>
+                                    <li class="text-white font-weight-bold">
+                                        Make new friends and get inspired
+                                    </li>
+                                    <li class="text-white font-weight-bold">
+                                        Gain or give the mentorship we all crave
+                                    </li>
+                                    <li class="text-white font-weight-bold">
+                                        Find partners for collaboration
+                                    </li>
+                                    <li class="text-white font-weight-bold">
+                                       Get inspired and motivated...and more!
+                                    </li>
+                                </ul>
+                                <h5 class="text-yellow">
+                                    Get started today! Your community is waiting!
+                                </h5>
+                            </div>
                         </div>
                     </div>
                   </div>
-                  <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-md-6 py-2 m-auto">
-                            <h1 class="text-yellow text-center text-uppercase">
-                                Hello beautiful creatives
-                            </h1>
+                  <div class="carousel-item bg-yellow">
+                    <div class="container py-5">
+                        <div class="row">
+                            <div class="col-md-6 py-2 m-auto">
+                                <h1 class="text-yellow bg-purple text-center text-uppercase">
+                                    HIRE <br>
+TALENTED <br>
+CREATIVES <br>
+                                </h1>
+                                <h2 class="text-dark text-center font-weight-normal">
+                                    THEY’RE WAITING FOR YOU!
+                                </h2>
+                            </div>
+                            <div class="col-md-6 py-2 m-auto">
+                                <h2 class="text-dark">
+                                    Looking to hire talent <br> for your next project?
+                                </h2>
+                                <div class="line bg-purple"></div>
+                                <p class="text-dark">
+                                    <span class="font-weight-bold">We act as a support system for creatives</span>
+                                    by quickly <br> connecting them with clients(like you!) hiring now.
+                                </p>
+                                <ul>
+                                    <li class="text-dark font-weight-bold">
+                                        Post your jobs for FREE
+                                    </li>
+                                    <li class="text-dark font-weight-bold">
+                                        Connect with unlimited Creatives.
+                                    </li>
+                                    <li class="text-dark font-weight-bold">
+                                        Start your project faster
+                                    </li>
+                                    
+                                </ul>
+                                <h5 class="text-purple">
+                                    We have so much talent here. Get started NOW!
+                                </h5>
+                            </div>
                         </div>
-                        <div class="col-md-6 py-2 m-auto">
-                            <h2 class="text-white">
-                                Looking to Hire Talented Freelancers for your next project?
-                            </h2>
-                            <p class="text-white">
-                                The <b>Design Database</b> is an online platform and community designed as a support system for Creatives, by quickly connecting them with clients(like you!) looking to hire now.
-                            </p>
-                            <p class="text-yellow">
-                                We have so much talents for you. Get Started Now
-                            </p>
+                    </div>
+                  </div>
+                  <div class="carousel-item bg-dark">
+                    <div class="container py-5">
+                        <div class="row">
+                            <div class="col-md-6 py-2 m-auto">
+                                <h1 class="text-yellow bg-purple text-center text-uppercase">
+                                    FIND <br>
+THE RIGHT <br>
+CREATIVES <br>
+                                </h1>
+                                <h2 class="text-white text-center font-weight-normal">
+                                    WE HAVE THEM ALL HERE!
+                                </h2>
+                            </div>
+                            <div class="col-md-6 py-2 m-auto">
+                                <h2 class="text-yellow">
+                                    What type of Creative <br>are you looking for?
+                                </h2>
+                                <div class="line bg-purple"></div>
+                                <p class="text-white">
+                                    <span class="font-weight-bold">Let's connect you</span>
+                                </p>
+                                <ul>
+                                    <li class="text-white font-weight-bold">
+                                        Designers (graphic, web, textile, jewelry, fashion, etc)
+                                    </li>
+                                    <li class="text-white font-weight-bold">
+                                        Illustrators, and digital artists
+                                    </li>
+                                    <li class="text-white font-weight-bold">
+                                       Photographers
+                                    </li>
+                                    <li class="text-white font-weight-bold">
+                                        Writters
+                                     </li>
+                                </ul>
+                                <h5 class="text-yellow">
+                                    Search the database. Find your match now!
+                                </h5>
+                            </div>
                         </div>
                     </div>
                   </div>
@@ -129,12 +238,12 @@
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                   <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span> -->
-                  <i class="fa fa-angle-left fa-2x text-yellow"></i>
+                  <i class="fa fa-angle-left fa-2x text-white"></i>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                   <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span> -->
-                  <i class="fa fa-angle-right fa-2x text-yellow"></i>
+                  <i class="fa fa-angle-right fa-2x text-white"></i>
                 </a>
               </div>
         </div>
