--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
     <!-- carousel -->
-    <section class="carouselSlider bg-primary">
+    <section class="carouselSlider">
         <div class="container-fluid p-0">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
